general cleanup, added twitter feed
git-svn-id: file:///var/lib/svn/openjsan/openjsan/trunk@74 139b8d9b-c9ab-42d9-a619-4cf020c53d71

--- a/templates/src/about.html
+++ b/templates/src/about.html
@@ -26,22 +26,15 @@
   modern development.
 </p>
 
-<h1>Developers</h1>
-
-<h2>Casey West</h2>
-
-<p>
-  Casey West is the creator of Open JSAN and the developer of the JSAN
-  library for writing maintainable and modular JavaScript libraries.
-</p>
-
-<h2>Many Thanks</h2>
-
-<p>
-  This is not a one man show. Thank God.
-</p>
+<h1>Many Thanks</h1>
 
 <dl>
+
+  <dt>Casey West</dt>
+  <dd><p>
+    Casey West is the creator of Open JSAN and the developer of the JSAN
+    library for writing maintainable and modular JavaScript libraries.
+  </p></dd>
 
   <dt>Brendan Eich</dt>
   <dd><p>
