--- a/templates/src/index.html
+++ b/templates/src/index.html
@@ -12,9 +12,9 @@
 <div class="column">
 <h1>Connect</h1>
 <ul>
-  <li><a href="/documentation">Documentation</a>: <a href="http://master.openjsan.org/documentation/wiki/index.cgi">Wiki</a>, <a href="/faq">FAQ</a>.</li>
-  <li><a href="/community">Community</a>: <a href="/community/lists.html">Mailing Lists</a>, <a href="/community/rt.html">RT</a>, <a href="irc://irc.freenode.net/jsan">IRC</a>, <a href="http://planet.openjsan.org/">Planet</a>.</li>
-  <li><a href="/community/svn.html">Code</a>: <a href="http://cia.navi.cx/stats/project/jsan">CIA</a>.</li>
+  <li><a href="/documentation">Documentation</a>: <a href="/faq">FAQ</a>.</li>
+  <li><a href="/community">Community</a>: <a href="/community/lists.html">Mailing Lists</a>, <a href="irc://irc.freenode.net/jsan">IRC</a>.</li>
+  <li><a href="/community/svn.html">Code</a>: coming soon to GitHub.</li>
 </ul>
 
 [% INCLUDE news/index.html | replace('__END__(.|\n)+', ' -->') %]
