--- a/templates/src/news/index.html
+++ b/templates/src/news/index.html
@@ -2,6 +2,19 @@
 
 <h1>News</h1>
 
+<div id="twitter_div">
+<ul id="twitter_update_list"></ul>
+<a href="http://twitter.com/openjsan" id="twitter-link"
+style="display:block;text-align:right;">@openjsan on Twitter</a>
+</div>
+
+<script type="text/javascript"
+src="http://twitter.com/javascripts/blogger.js"></script>
+<script type="text/javascript"
+src="http://twitter.com/statuses/user_timeline/openjsan.json?callback=twitterCallback2&amp;count=5"></script>
+
+<!-- __END__ -->
+
 <h2>Update - 2007-01-14</h2>
 
 <ul>
@@ -25,8 +38,6 @@
   <li>RT tickets were cleaned up a bit.  Please report bugs there as always.</li>
   <li>Join us in #jsan on Freenode if you are interested in what's going on.</li>
 </ul>
-
-<!-- __END__ -->
 
 <h2>Update - 2006-02-28</h2>
 
@@ -265,4 +276,3 @@ JSAN.use('Test.Simple');
   a more stable and useful state. Version 0.01 is expected to be released
   at OSCON.
 </p>
-
