added github links

--- a/templates/src/index.html
+++ b/templates/src/index.html
@@ -13,8 +13,8 @@
 <h1>Connect</h1>
 <ul>
   <li><a href="/documentation">Documentation</a>: <a href="/faq">FAQ</a>.</li>
-  <li><a href="/community">Community</a>: <a href="/community/lists.html">Mailing Lists</a>, <a href="irc://irc.freenode.net/jsan">IRC</a>.</li>
-  <li><a href="/community/svn.html">Code</a>: coming soon to GitHub.</li>
+  <li><a href="/community">Community</a>: <a href="http://github.com/openjsan/openjsan/issues">Todo</a>, <a href="http://wiki.github.com/openjsan/openjsan">Wiki</a>, <a href="/community/lists.html">Mailing Lists</a>, <a href="irc://irc.freenode.net/jsan">IRC</a>.</li>
+  <li><a href="http://github.com/openjsan">Code</a> via Git &amp; GitHub.</li>
 </ul>
 
 [% INCLUDE news/index.html | replace('__END__(.|\n)+', ' -->') %]
