general community and doc cleanup to integrate to github better

--- a/templates/src/documentation/index.html
+++ b/templates/src/documentation/index.html
@@ -9,7 +9,7 @@
 </p>
 
 <ul>
-  <li><a href="http://master.openjsan.org/documentation/wiki/index.cgi">Wiki</a></li>
+  <li><a href="http://wiki.github.com/openjsan/openjsan">Wiki</a></li>
   <li><a href="dists.html">Distributions</a></li>
   <li><a href="install.html">Installing JSAN Libraries</a></li>
   <li><a href="roadmap.html">Road Map</a></li>
