--- a/templates/src/community/index.html
+++ b/templates/src/community/index.html
@@ -9,7 +9,7 @@
   <li><a href="lists.html">Mailing Lists</a></li>
   <li><a href="mirrors.html">Mirrors</a></li>
   <li><a href="http://planet.openjsan.org">Planet JavaScript</a></li>
-  <li><a href="svn.html">Subversion</a></li>
+  <li><a href="code.html">Code</a></li>
   <li><a href="rt.html">Request Tracker</a></li>
   <li><a href="promote.html">Promote</a></li>
 </ul>
