fixed rt link and removed planet js

--- a/templates/src/community/index.html
+++ b/templates/src/community/index.html
@@ -8,9 +8,9 @@
 <ul>
   <li><a href="lists.html">Mailing Lists</a></li>
   <li><a href="mirrors.html">Mirrors</a></li>
-  <li><a href="http://planet.openjsan.org">Planet JavaScript</a></li>
+  <!--<li><a href="http://planet.openjsan.org">Planet JavaScript</a></li>-->
   <li><a href="code.html">Code</a></li>
-  <li><a href="rt.html">Request Tracker</a></li>
+  <li><a href="http://github.com/openjsan/openjsan/issues">Todo</a> - Bugs, Feature Requests, etc...</li>
   <li><a href="promote.html">Promote</a></li>
 </ul>
 
