--- a/templates/src/jause/index.html
+++ b/templates/src/jause/index.html
@@ -35,6 +35,15 @@
           user  = jsan.user_info(id => in.id).account;
           login = in.seed;
       END;
+  ELSIF cgi.param('password-recover');
+      show = 'password-recover';
+      in = jsan.password_recover(
+          login => cgi.param('login'),
+          email => cgi.param('email'),
+      );
+      IF in.error;
+          error = in.error;
+      END;
   ELSIF cgi.param('upload-dist');
       show     = 'upload-dist';
       uploaded = jsan.upload_dist(
@@ -62,10 +71,12 @@
         disp.hideElement('login-account');
         disp.hideElement('logout-account');
         disp.hideElement('upload-dist');
+        disp.hideElement('password-recover');
         disp.showOnlyElement('jause-home');
         if (show == 'new-account') createUser();
         if (show == 'login-account') loginUser();
         if (show == 'upload-dist') uploadDist();
+        if (show == 'password-recover') passwordRecover();
         
         if (self.location.hash == '#upload-complete') uploadDist();
 
@@ -115,6 +126,17 @@
             disp.showElement('upload-dist');
         } else {
             showSuccess("Distribution uploaded and will be processed later.");
+            disp.showOnlyElement('show-success');
+        }
+    }
+
+    function passwordRecover () {
+        if (error.length > 0) {
+            
+            disp.showOnlyElement('show-error');
+            disp.showElement('password-recover');
+        } else {
+            showSuccess("New password emailed.");
             disp.showOnlyElement('show-success');
         }
     }
@@ -181,6 +203,22 @@
       <input type="password" name="pass" id="loginpass" />
       </label>
       <input type="submit" name="login-account" class="submit" value="Login" />
+    </fieldset>
+  </form>
+  <a href="javascript:disp.showOnlyElement('password-recover');">Forgot password?</a>
+</div>
+
+<div id="password-recover">
+  <form id="password-recover-form" method="post">
+    <fieldset class="standard-form">
+      <legend>Recover Password</legend>
+      <label for="loginlogin">JAUSE ID
+      <input type="text" name="login" id="recoverlogin" value="[* cgi.param('login') *]" />
+      </label>
+      <label for="loginpass">Email
+      <input type="text" name="email" id="recoveremail" />
+      </label>
+      <input type="submit" name="password-recover" class="submit" value="Recover" />
     </fieldset>
   </form>
 </div>
