fixed incorrect label attributes

--- a/templates/src/jause/index.html
+++ b/templates/src/jause/index.html
@@ -212,10 +212,10 @@
   <form id="password-recover-form" method="post">
     <fieldset class="standard-form">
       <legend>Recover Password</legend>
-      <label for="loginlogin">JAUSE ID
+      <label for="recoverlogin">JAUSE ID
       <input type="text" name="login" id="recoverlogin" value="[* cgi.param('login') *]" />
       </label>
-      <label for="loginpass">Email
+      <label for="recoveremail">Email
       <input type="text" name="email" id="recoveremail" />
       </label>
       <input type="submit" name="password-recover" class="submit" value="Recover" />
