Fix all reference to svn.html except in news, and make svn.html just point to code.html.
Signed-off-by: David E. Wheeler <david@justatheory.com>

--- a/templates/src/faq/index.html
+++ b/templates/src/faq/index.html
@@ -77,8 +77,8 @@
 
 <p>
   Because I haven't had time to get there yet. Please consider
-  <a href="/community/svn.html">contributing</a> or at least
-  <a href="/community/rt.html">mentioning</a> the features you would
+  <a href="/community/code.html">contributing</a> or at least
+  <a href="http://github.com/openjsan/openjsan/issues">mentioning</a> the features you would
   like.
 </p>
 
@@ -94,6 +94,6 @@
 
 <p>
   Fix something, add something, create something, and
-  <a href="/community/svn.html">commit it!</a>
+  <a href="/community/code.html">commit it!</a>
 </p>
 
