--- a/templates/src/community/svn.html
+++ b/templates/src/community/svn.html
@@ -1,16 +1,7 @@
-[% META title = 'Community - Subversion Source Control' %]
+[% META title = 'Community - JSAN is Now on Github %]
 
-<h1>JSAN Subversion Repository</h1>
+<h1>JSAN is Now on Github</h1>
 
 <p>
-  The code that runs JSAN is available in the JSAN Subversion Repository.
-  Checkout a copy and start hacking! Send your patches to the
-  <a href="lists.html#jsan-devel">JSAN Development Mailing List</a> or
-  discuss them on <a href="irc://irc.freenode.net/jsan"><code>irc.freenode.net</code> in the <code>#jsan</code>
-  channel</a>. Once you've done that you're ready to get commit rights and you
-  can contribute accordingly.
+  See <a href="/community/code.html">the code page</a> for details.
 </p>
-
-<pre>
-svn co svn://svn.openjsan.org/openjsan
-</pre>
