Fix documentation link

--- a/templates/src/documentation/dists.html
+++ b/templates/src/documentation/dists.html
@@ -7,7 +7,7 @@ We have created an example distribution that you can use as a starting
 point for developing and packaging JSAN libraries.
 </p>
 <p>
-<a href="JSAN.Example-0.01.tar.gz">Download and Get Started.</a>
+<a href="/go?l=Module.Stub">Download and Get Started.</a>
 </p>
 
 <h2>Distribution Format</h2>
