--- a/templates/src/community/rt.html
+++ b/templates/src/community/rt.html
@@ -1,4 +1,4 @@
-[% META title = 'Community - JSAN Todo is Now on Github %]
+[% META title = "Community - JSAN Todo is Now on Github" %]
 
 <h2>JSAN Todo is Now on Github</h2>
 
