--- a/templates/src/community/svn.html
+++ b/templates/src/community/svn.html
@@ -1,4 +1,4 @@
-[% META title = 'Community - JSAN is Now on Github %]
+[% META title = "Community - JSAN is Now on Github" %]
 
 <h1>JSAN is Now on Github</h1>
 
